fixed vertical alignment of social medial icons hover text

--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -100,7 +100,7 @@ footer .social-media-container a:hover {
 
 footer .social-media-container i {
 	font-size: 40px;
-	vertical-align: middle;
+	/* vertical-align: middle; */
 	line-height: 40px;
 }
 footer .social-media-container a:hover i {
